<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">tiendavirtualuco</string>

    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="no_tienes_una_cuenta_registrate">¿No tienes una cuenta? Registrate</string>
   <!-- <string name="correo_electronico" tools:ignore="DuplicateDefinition">Correo Electronico</string>-->
    <string name="ingresa_en_tu_cuenta">Ingresa en tu cuenta</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Usuario</string>
    <!--<string name="apellido" tools:ignore="DuplicateDefinition">Apellido</string>-->
    <string name="c_contraseña">Confirmar Contraseña</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="numero_documento">Numero de Documento</string>
    <string name="tipo_usuario">Tipo Usuario</string>



    <string name="_1_9998887776_ninfo_tradly_co">+1 9998887776\ninfo@tradly.co</string>
    <string name="trazabilidad">Trazabilidad</string>
    <string name="imagen_soporte">Imagen soporte</string>
    <string name="id">Id:</string>
    <string name="producto">Producto:</string>
    <string name="detalle">Detalle</string>
    <string name="id_producto">Id producto: </string>
    <string name="imagen_del_equipo_tecnico">Imagen del equipo tecnico</string>

    <string name="informacion_equipo">Equipo de trazabilidad\n+1 9998887776\ninfo@tradly.co</string>
    <string name="informacion_equipo_android_textalignment">informacion_equipo android:textAlignment=</string>
    <string name="seguimiento_de_pedido">Seguimiento de Pedido</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="imagen_del_equipo_t_cnico">Imagen del equipo técnico</string>
    <string name="fecha_despacho">Fecha Despacho:</string>
    <string name="vendedor">Vendedor:</string>
    <string name="comprador">Comprador:</string>
    <string name="detalle_comprador">Detalle Comprador</string>
    <string name="nombre">Nombre: </string>
    <string name="celular">Celular: </string>
    <string name="correo_electronico" tools:ignore="DuplicateDefinition">Correo Electronico: </string>
    <string name="fecha_creacion">Fecha de creacion de cuenta: </string>
    <string name="volver">Volver</string>
    <string name="detalle_vendedor">Detalle Vendedor</string>
    <string name="egresos">Egresos: </string>
    <string name="compradores">Compradores</string>
    <string name="vendedores">Vendedores</string>
    <string name="listado_vendedores">Listado de Vendedores</string>
    <string name="listado_compradores">Listado de Compradores</string>

    <string name="bitcoin_vector">Bitcoin vector</string>
    <string name="cart_vector">Cart Vector</string>
    <string name="buscar">Buscar</string>
    <string name="search_hint">Buscar producto</string>
    <string name="productos_title">Productos</string>
    <string name="search_icon">Search icon</string>
    <string name="icono_de_venta">Icono de venta</string>
    <string name="icono_de_carrito">Icono de carrito</string>
    <string name="mis_compras">Mis compras</string>
    <string name="icono_compras">Icono compras</string>
    <string name="icono_busqueda">Icono busqueda</string>
    <string name="ofertas">Ofertas\n</string>
    <string name="favoritos">Mis Favoritos</string>
    <string name="historial_compras">Historial compras</string>
    <string name="mis_productos">Mis productos</string>
    <string name="icono_de_favoritos">Icono de favoritos</string>
    <string name="icono_de_historal_de_compras">Icono de historal de compras</string>
    <string name="icono_de_mis_productos">Icono de mis productos</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="icono_de_me_gusta">Icono de me gusta</string>
    <string name="icono_de_agregar">icono de agregar</string>
    <string name="icono_tienda">Icono de la tienda</string>
    <string name="my_tienda">Mi tienda</string>
    <string name="imagen_producto_favorito">Imagen Producto Favorito</string>
    <string name="listado_de_usuarios">Listado de usuarios</string>
    <string name="tipo_de_usuario">Tipo de Usuario: </string>
    <string name="numero_de_identificaci_n">Numero de Identificación: </string>
    <string name="tipo_de_documento">Tipo de documento: </string>
    <string name="apellido" >Apellidos: </string>
    <string name="imagen_del_equipo">Imagen del equipo</string>
    <string name="detalles_producto">Detalles Producto</string>
    <string name="trazabilidad_productos">Trazabilidad Productos</string>
    <string name="voltaje_100v_240v_n_tama_o_de_la_pantalla_27_n_pantalla_lcd_de_27_n_resoluci_n_1920x1080px_n_relaci_n_de_aspecto_16_9_n_panel_va_n_250cd_m_n_conexi_n_2_hdmi">• Voltaje: 100V/240V\n• Tamaño de la pantalla: 27\\n• Pantalla LCD de 27\\n• Resolución: 1920x1080px\n• Relación de aspecto 16:9\n• Panel VA\n• 250cd/m²\n• Conexión 2 HDMI</string>
    <string name="monitor_lg_ultragear_27gq50f_lcd_27">Monitor LG UltraGear 27GQ50F LCD 27\\</string>
    <string name="_725_000">$725.000</string>
    <string name="_870_000_20_off">$870.000 20% OFF</string>
    <string name="visitar">Visitar</string>
    <string name="jap_store">JAP Store</string>
    <string name="todo">TODO</string>
    <!-- Botones  -->
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_visitar">Visitar</string>
    <string name="boton_comprar">Comprar</string>
    <string name="boton_agregar_carrito">Agregar al carrito</string>



        <string name="spinner_prompt">Elija una opción</string>
        <string-array name="report_reasons">
            <item>No me gustó el producto</item>
            <item>Muy pequeño</item>
            <item>No me llegó el producto solicitado</item>
            <item>No era lo que esperaba, llegó con defecto</item>
            <item>Hice pago de producto y no llegó</item>
            <item>El producto no llegó a su destino</item>
            <item>Presentó diferencia con el material</item>
        </string-array>


</resources>