<!-- res/layout/header_layout.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header_hm"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@color/primary_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/directrizBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <TextView
        android:id="@+id/cabeceraTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/buscar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <View
        android:id="@+id/buscarView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/directrizBuscar"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="@id/directrizBuscar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <EditText
        android:id="@+id/etBuscar"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:autofillHints="Buscar producto"
        android:background="@android:color/transparent"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/buscarView"
        app:layout_constraintEnd_toEndOf="@id/buscarView"
        app:layout_constraintStart_toStartOf="@id/buscarView"
        app:layout_constraintTop_toTopOf="@id/buscarView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/icBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search_icon"
        app:layout_constraintBottom_toBottomOf="@id/buscarView"
        app:layout_constraintEnd_toStartOf="@id/etBuscar"
        app:layout_constraintStart_toStartOf="@id/buscarView"
        app:layout_constraintTop_toTopOf="@id/buscarView"
        app:srcCompat="@drawable/baseline_search_24" />

    <ImageView
        android:id="@+id/icVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:contentDescription="@string/icono_de_venta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_currency_bitcoin_24" />

    <ImageView
        android:id="@+id/icCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/icono_de_carrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_shopping_cart_24" />
</androidx.constraintlayout.widget.ConstraintLayout>
